--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <title>Hello Builder!</title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/two.js"></script>
-    <script type="text/javascript" src="js/underscore.js"></script>
-    <script type="text/javascript" src="js/backbone.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/external/two.js"></script>
+    <script type="text/javascript" src="js/external/underscore.js"></script>
+    <script type="text/javascript" src="js/external/backbone.js"></script>
+    <script type="text/javascript" src="js/model.js"></script>
 </head>
 <body>
 
